--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,90 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Contact</title>
+  <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Poppins&display=swap" rel="stylesheet">
   <link href="./css/bootstrap.css" rel="stylesheet">
   <link href="./css/wickedcss.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.13.0/css/mdb.min.css" rel="stylesheet">
   <link href="./css/contact.css" rel="stylesheet">
+  <link rel="stylesheet" href="./css/icomoon.css">
 </head>
 <body>
+  <nav class="navbar navbar-inverse navbar-fixed-top" style="z-index:10" >
+    <div class="logo">
+      <h4>UKULIMA HUB</h4>
+    </div>
+    <ul class="nav-links">
+      <li>
+        <a href="index.html">home</a>
+      </li>
+      <li>
+        <a href="description.html">description</a>
+      </li>
+      <li>
+        <a href="advisor.html">advisor</a>
+      </li>
+      <li>
+        <a href="contact.html">contact</a>
+      </li>
+
+    </ul>
+    <div class="burger">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
+    </div>
+  </nav>
+  <br><br>
+  <footer>
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3 col-sm-6 col-xs-12 segment-one md-mb-30 sm-mb-30">
+            <h3>Ukulima Hub</h3>
+            <p>We are here for you.</p>
+          </div>
+          <div class="col-md-3 col-sm-6 col-xs-12 segment-two md-mb-30 sm-md-30">
+            <h2>crops</h2>
+            <p>We have a variety of crops</p>
+            <ul>
+              <li><a href="#">Event</a></li>
+              <li><a href="#">Support</a></li>
+              <li><a href="#">Hosting</li>
+              <li><a href="#">Career</a></li>
+              <li><a href="#">Blog</a></li>
+              
+            </ul>
+          </div>
+          <div class="col-md-3 col-sm-6 col-xs-12 segment-three segment-two md-mb-30 sm-md-30">
+            <h2>Follow us</h2> 
+            <p>Social media</p>
+            <div class="colorlib-social-icons">
+              <a href="https://twitter.com/login"><i class="icon-twitter"></i></a>
+              <a href="https://www.facebook.com/"><i class="icon-facebook"></i></a>
+              <a href="https://linkedin.com/"><i class="icon-linkedin"></i></a>
+              <a href="https://dribbble.com/"><i class="icon-dribbble"></i></a>
+          </div>
+          </div>
+          <div class="col-md-3 col-sm-6 col-xs-12 segment-four segment-two md-mb-30 sm-md-30">
+            <h2>Our Newsletter</h2>
+            <p></p>
+            <form action="">
+              <input type="email">
+              <input type="submit" value="subscribe">
+
+            </form>
+          </div>
+
+        </div>
+       
+      </div>
+    </div>
+    <p class="footer-bottom-text">All Rights Reserved by &copy;Ukulima Hub.2020 </p>
+  </footer>
+  
+
   <script src="./js/jquery-3.4.1.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="./js/scripts.js"></script>    
