--- a/advisor.html
+++ b/advisor.html
@@ -19,8 +19,6 @@
   />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link href="./css/wickedcss.min.css" rel="stylesheet" />
- 
   <link href="https://fonts.googleapis.com/css?family=Athiti&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -41,7 +39,7 @@
       <li>
         <a href="contact.html">contact</a>
       </li>
-
+      
     </ul>
     <div class="burger">
       <div class="line1"></div>
@@ -60,7 +58,7 @@
         <div class="col-md-4">
           <form>
             <div class="dropdown">
-              <button class="button bg-danger"
+              <button class="button "
                 class="btn btn-default dropdown-toggle"
                 type="button"
                 data-toggle="dropdown"
