added icons on footer'

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.13.0/css/mdb.min.css" rel="stylesheet">
   <link href="./css/main.css" rel="stylesheet">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/icomoon.css">
 </head>
 <body>
@@ -64,10 +65,10 @@
             <h2>Follow us</h2> 
             <p>Social media</p>
             <div class="colorlib-social-icons">
-              <a href="https://twitter.com/login"><i class="icon-twitter"></i></a>
-              <a href="https://www.facebook.com/"><i class="icon-facebook"></i></a>
-              <a href="https://linkedin.com/"><i class="icon-linkedin"></i></a>
-              <a href="https://dribbble.com/"><i class="icon-dribbble"></i></a>
+              <a href="https://twitter.com/login"><i class="fa fa-twitter"></i></a>
+              <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+              <a href="https://linkedin.com/"><i class="fa fa-linkedin"></i></a>
+              <a href="https://instagram.com/"><i class="fa fa-instagram"></i></a>
           </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12 segment-four segment-two md-mb-30 sm-md-30">
