initial contact commit

--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.13.0/css/mdb.min.css" rel="stylesheet">
   <link href="./css/contact.css" rel="stylesheet">
   <link rel="stylesheet" href="./css/icomoon.css">
+ 
 </head>
 <body>
   <nav class="navbar navbar-inverse navbar-fixed-top" style="z-index:10" >
@@ -39,7 +40,7 @@
       <div class="line3"></div>
     </div>
   </nav>
-  <br><br>
+
   <footer>
     <div class="footer-top">
       <div class="container">
@@ -90,7 +91,7 @@
 
   <script src="./js/jquery-3.4.1.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="./js/scripts.js"></script>    
+  <script src="./js/contact.js"></script>    
 </body>
 </html>
 
