fixed unnecessary spacing on index.html'

--- a/description.html
+++ b/description.html
@@ -39,7 +39,7 @@
           <a href="advisor.html">advisor</a>
         </li>
         <li>
-          <a href="#">contact</a>
+          <a href="contact.html">contact</a>
         </li>
 
       </ul>
