added background to contact file ,formatted the forms

--- a/advisor.html
+++ b/advisor.html
@@ -180,11 +180,11 @@
             <h2>Crops</h2>
             <p>We have a variety of crops</p>
             <ul>
-              <li><a href="#event">Event</a></li>
-              <li><a href="#support">Support</a></li>
-              <li><a href="#hosting">Hosting</li>
-              <li><a href="#career">Career</a></li>
-              <li><a href="#blog">Blog</a></li>
+              <li><a href="https://smartfarmerkenya.com/category/farming-events/">Event</a></li>
+              <li><a href="https://www.farmafrica.org/kenya/farming-opportunities-for-young-people">Support</a></li>
+              <li><a href="https://www.workaway.info/en/host/686399698755">Hosting</li>
+              <li><a href="https://ypard.net/news/beginner%E2%80%99s-guide-careers-agriculture-and-farming">Career</a></li>
+              <li><a href="https://graduatefarmer.co.ke/tag/farming-blogs-in-kenya/">Blog</a></li>
             </ul>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12 segment-three segment-two md-mb-30 sm-md-30">
