--- a/contact.html
+++ b/contact.html
@@ -23,16 +23,16 @@
     </div>
     <ul class="nav-links">
       <li>
-        <a href="index.html">home</a>
+        <a href="index.html">Home</a>
       </li>
       <li>
-        <a href="description.html">description</a>
+        <a href="description.html">Description</a>
       </li>
       <li>
-        <a href="advisor.html">advisor</a>
+        <a href="advisor.html">Advisor</a>
       </li>
       <li>
-        <a href="contact.html">contact</a>
+        <a href="contact.html">Contact</a>
       </li>
 
     </ul>
@@ -64,7 +64,7 @@
             <form>
               <input type="text" id="first-name" placeholder="First Name" required>
               <input type="text" id="last-name" placeholder="Last Name" required>
-              <input type="Email" id="email" placeholder="Email" required>
+              <input type="Email" id="email-1" placeholder="Email" required>
               <input type="text" placeholder="Subject of this message" required>
               <textarea name="message" id="comment" placeholder="Message" rows="5" required></textarea>
               <button id="btn" class="submit">Send Message</button>
@@ -87,11 +87,11 @@
             <h2>crops</h2>
             <p>We have a variety of crops</p>
             <ul>
-              <li><a href="#">Event</a></li>
-              <li><a href="#">Support</a></li>
-              <li><a href="#">Hosting</li>
-              <li><a href="#">Career</a></li>
-              <li><a href="#">Blog</a></li>
+              <li><a href="https://smartfarmerkenya.com/category/farming-events/">Event</a></li>
+              <li><a href="https://www.farmafrica.org/kenya/farming-opportunities-for-young-people">Support</a></li>
+              <li><a href="https://www.workaway.info/en/host/686399698755">Hosting</li>
+              <li><a href="https://ypard.net/news/beginner%E2%80%99s-guide-careers-agriculture-and-farming">Career</a></li>
+              <li><a href="https://graduatefarmer.co.ke/tag/farming-blogs-in-kenya/">Blog</a></li>
               
             </ul>
           </div>
