--- a/description.html
+++ b/description.html
@@ -30,16 +30,16 @@
       </div>
       <ul class="nav-links">
         <li>
-          <a href="index.html">home</a>
+          <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="description.html">description</a>
+          <a href="description.html">Description</a>
         </li>
         <li>
-          <a href="advisor.html">advisor</a>
+          <a href="advisor.html">Advisor</a>
         </li>
         <li>
-          <a href="contact.html">contact</a>
+          <a href="contact.html">Contact</a>
         </li>
 
       </ul>
@@ -98,7 +98,7 @@
         <div id="content2">
           <h2>Beans</h2>
           <div id="imagefit" class="slideDown">
-            <a href="http://mobile-app-market-here1.info/away.php"><img src="./images/beans.jpeg"></a>
+            <a href="http://oxfarm.co.ke/crop-farming/grains-farming/ultimate-guide-for-beans-farming-in-kenya/"><img src="./images/beans.jpeg"></a>
     
           </div>
           <div class="bounceIn">
@@ -171,7 +171,7 @@
         <div id="content5">
           <h2>Tea</h2>
           <div id="imagefit" class="slideDown">
-            <a href="http://www.farmlinkkenya.com/wheat-farming/"><img src="./images/tea.jpeg"></a>
+            <a href="http://www.ethicalteapartnership.org/country/kenya/"><img src="./images/tea.jpeg"></a>
           </div>
           <h4>ECOLOGICAL REQUIREMENTS</h4>
           <p>
@@ -201,7 +201,7 @@
           <div class="col-sm-12">
             <hr>
             <h2 class="title text-center">
-              Our <span class="decorate">Gallery</span> :
+              Our <span class="decorate">Farms</span> :
             </h2>
           </div>
         </div>
@@ -362,11 +362,11 @@
               <h2 class="footerh">crops</h2>
               <p>We have a variety of crops</p>
               <ul>
-                <li><a href="#">Event</a></li>
-                <li><a href="#">Support</a></li>
-                <li><a href="#">Hosting</li>
-                <li><a href="#">Career</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="https://smartfarmerkenya.com/category/farming-events/">Event</a></li>
+                <li><a href="https://www.farmafrica.org/kenya/farming-opportunities-for-young-people">Support</a></li>
+                <li><a href="https://www.workaway.info/en/host/686399698755">Hosting</li>
+                <li><a href="https://ypard.net/news/beginner%E2%80%99s-guide-careers-agriculture-and-farming">Career</a></li>
+                <li><a href="https://graduatefarmer.co.ke/tag/farming-blogs-in-kenya/">Blog</a></li>
 
               </ul>
             </div>
