--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
     </div>
     <ul class="nav-links">
       <li>
-        <a href="index.html">home</a>
+        <a href="index.html">Home</a>
       </li>
       <li>
-        <a href="description.html">description</a>
+        <a href="description.html">Description</a>
       </li>
       <li>
-        <a href="advisor.html">advisor</a> 
+        <a href="advisor.html">Advisor</a> 
       </li>
       <li>
-        <a href="contact.html">contact</a>
+        <a href="contact.html">Contact</a>
       </li>
 
     </ul>
@@ -61,8 +61,8 @@
             <p class="captionText">The very beautiful Nandi plains</p>
         </div>
         <div class="imageHolder">
-            <img src="images/photo-1535090467336-9501f96eef89 (1).jpeg">
-            <p class="captionText">One of our Ukulima farmers</p>
+            <img src="./images/two-men-standing-on-green-grass-field-2049001.jpg">
+            <p class="captionText">Some of our Ukulima farmers</p>
         </div>
     </div>
     <div id="dotsContainer"></div>
@@ -94,25 +94,25 @@
 
 <div class="gallery2Container">
   <div class="box a">
-    <img src="./images/man2.jpeg" class="portrait">
+    <a href="advisor.html"> <img src="./images/man2.jpeg" class="landscape"></a>
   </div>
   <div class="box d">
-    <img src="./images/alot2.jpeg" class="landscape">
+    <a href="advisor.html"> <img src="./images/alot2.jpeg" class="landscape"></a>
   </div>
   <div class="box c">
-    <img src="./images/jembe.jpeg" class="landscape">
+    <a href="advisor.html"> <img src="./images/jembe.jpeg" class="landscape"></a>
   </div>
   <div class="box b">
-    <img src="./images/greenhouse.jpeg" class="landscape">
+    <a href="advisor.html"> <img src="./images/greenhouse.jpeg" class="landscape"></a>
   </div>
   <div class="box e">
-    <img src="./images/sun.jpeg" class="landscape">
+    <a href="advisor.html"> <img src="./images/sun.jpeg" class="landscape"></a>
   </div>
   <div class="box f">
-    <img src="./images/wheat.jpeg" class="landscape">
+    <a href="advisor.html"> <img src="./images/wheat.jpeg" class="landscape"></a>
   </div>
    <div class="box g">
-    <img src="./images/farmer3.jpeg" class="landscape">
+    <a href="advisor.html"> <img src="./images/farmer3.jpeg" class="landscape"></a>
   </div>
 </div>
 
@@ -128,11 +128,11 @@
             <h2>crops</h2>
             <p>We have a variety of crops</p>
             <ul>
-              <li><a href="#">Event</a></li>
-              <li><a href="#">Support</a></li>
-              <li><a href="#">Hosting</li>
-              <li><a href="#">Career</a></li>
-              <li><a href="#">Blog</a></li>
+              <li><a href="https://smartfarmerkenya.com/category/farming-events/">Event</a></li>
+              <li><a href="https://www.farmafrica.org/kenya/farming-opportunities-for-young-people">Support</a></li>
+              <li><a href="https://www.workaway.info/en/host/686399698755">Hosting</li>
+              <li><a href="https://ypard.net/news/beginner%E2%80%99s-guide-careers-agriculture-and-farming">Career</a></li>
+              <li><a href="https://graduatefarmer.co.ke/tag/farming-blogs-in-kenya/">Blog</a></li>
               
             </ul>
           </div>
