Added styling to subscribe button on footer

--- a/description.html
+++ b/description.html
@@ -32,9 +32,9 @@
         <li>
           <a href="index.html">Home</a>
         </li>
-        <li>
+        <!-- <li>
           <a href="description.html">Description</a>
-        </li>
+        </li> -->
         <li>
           <a href="advisor.html">Advisor</a>
         </li>
@@ -194,7 +194,7 @@
     </div>
         
     
-    <!--galary-->
+    <!--gallery-->
     <section class="section-padding" id="portfolio">
       <div class="container">
         <div class="row">
@@ -385,7 +385,7 @@
               <p></p>
               <form onsubmit="return false" action="">
                 <input id="email" type="email">
-                <input type="submit" onclick="subscribe()" value="subscribe">
+                <input id="submit" type="submit" onclick="subscribe()" value="subscribe">
               </form>
             </div>
 
